.metadata/.plugins/org.eclipse.cdt.ui/F4_boost.build.log
15:48:18 **** Incremental Build of configuration Debug for project F4_boost ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F407xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I"D:/work/study/stm32/cubeIDEworkspace/F4_boost/Core/USER/INC" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F407xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I"D:/work/study/stm32/cubeIDEworkspace/F4_boost/Core/USER/INC" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
arm-none-eabi-gcc "../Core/Src/tim.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F407xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I"D:/work/study/stm32/cubeIDEworkspace/F4_boost/Core/USER/INC" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/tim.d" -MT"Core/Src/tim.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/tim.o"
arm-none-eabi-gcc "../Core/USER/PID/pid.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F407xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I"D:/work/study/stm32/cubeIDEworkspace/F4_boost/Core/USER/INC" -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/USER/PID/pid.d" -MT"Core/USER/PID/pid.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/USER/PID/pid.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:114:21: error: 'KP' undeclared (first use in this function)
   Set_PID_Parameter(KP,KI,KD); //PID调节参数
                     ^~
../Core/Src/main.c:114:21: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:114:24: error: 'KI' undeclared (first use in this function); did you mean 'KP'?
   Set_PID_Parameter(KP,KI,KD); //PID调节参数
                        ^~
                        KP
../Core/Src/main.c:114:27: error: 'KD' undeclared (first use in this function); did you mean 'KI'?
   Set_PID_Parameter(KP,KI,KD); //PID调节参数
                           ^~
                           KI
../Core/Src/main.c: In function 'HAL_TIM_PeriodElapsedCallback':
../Core/Src/main.c:273:7: error: 'num' undeclared (first use in this function)
    if(num >= 10 && HAL_GPIO_ReadPin(Down_Button_GPIO_Port, Down_Button_Pin) == GPIO_PIN_SET) { //如果按下超过100ms并且以及松开
       ^~~
make: *** [Core/Src/subdir.mk:51: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:48:19 Build Failed. 6 errors, 0 warnings. (took 1s.65ms)

